--- a/package.json
+++ b/package.json
@@ -1,28 +1,15 @@
 {
-  "name": "graphql-apollo-chat",
+  "name": "graphql-urql-chat",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-cache-inmemory": "^1.4.2",
-    "apollo-client": "^2.4.12",
-    "apollo-link-http": "^1.5.11",
-    "apollo-link-ws": "^1.0.14",
-    "apollo-server-express": "^2.3.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "graphql": "^0.12.0",
-    "graphql-subscriptions": "^1.0.0",
-    "graphql-tag": "^2.10.1",
-    "graphql-tools": "^4.0.4",
-    "nodemon": "^1.18.9",
-    "react": "^16.7.0",
-    "react-apollo": "^2.4.1",
-    "react-dom": "^16.7.0",
-    "react-scripts": "1.0.17",
-    "subscriptions-transport-ws": "^0.9.15",
-    "uuid": "^3.3.2"
+    "apollo-server-express": "^2.6.7",
+    "graphql": "^14.4.2",
+    "nodemon": "^1.19.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "^3.0.1",
+    "urql": "^1.1.3"
   },
   "scripts": {
     "server": "nodemon --exec 'babel-node --presets=es2015,stage-0' --watch 'src/server/**/*.*' ./src/server/index.js",
@@ -31,13 +18,20 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": {
-    "/graphql": {
-      "target": "http://localhost:8000"
-    },
-    "/subscriptions": {
-      "target": "ws://localhost:8000",
-      "ws": true
-    }
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
