--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.0.1",
-    "urql": "^1.1.3"
+    "urql": "^1.1.3",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "server": "nodemon --exec 'babel-node --presets=es2015,stage-0' --watch 'src/server/**/*.*' ./src/server/index.js",
