--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.0.1",
+    "subscriptions-transport-ws": "^0.9.16",
     "urql": "^1.1.3",
     "uuid": "^3.3.2"
   },
